Overflow fix

--- a/src/themes/skelleton/assets/css/main.css
+++ b/src/themes/skelleton/assets/css/main.css
@@ -458,7 +458,6 @@
     .site-box{
         min-height: 100vh;
         display: flex;
-        flex-wrap: wrap;
         width: 100%;
         flex-direction: column;
     }
